--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "web-vitals": "^1.1.1",
     "xlsx": "^0.18.5"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+  },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
