--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-redux": "^7.2.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^7.0.4",
     "react-youtube": "^10.1.0",
     "recharts": "^2.6.2",
